# LasTorres-fc

./: .gitignore  README.md
Backend/: .dockerignore  .gitignore  Dockerfile  README.md  build.bat  debug_db.py  debug_password.py  debug_server.py  dev_server.py  docker-compose.yml  pyproject.toml  pyvenv.toml  requirements.txt  run-docker.bat  run.py  test_login.py  test_server.py
Backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py
Backend/app/routers/: __init__.py  auth.py  club.py  compat.py  debug.py  directiva.py  escuelita.py  eventos.py  galeria.py  jugadores.py  noticias.py  partidos.py  upload.py
Backend/tests/: __init__.py  test_auth.py  test_endpoints.py  test_models.py
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/club/: page.tsx
frontend/app/contacto/: page.tsx
frontend/app/directiva/: page.tsx
frontend/app/escuelita/: page.tsx
frontend/app/galeria/: page.tsx
frontend/app/jugadores/: page.tsx
frontend/app/noticias/: page.tsx
frontend/components/: breadcrumb.tsx  cta-section.tsx  footer.tsx  hero-carousel.tsx  matches-section.tsx  navbar.tsx  news-grid.tsx  news-section.tsx  news-slider.tsx  section-cards.tsx  stats-section.tsx  theme-provider.tsx
frontend/components/admin/: admin-sidebar.tsx  event-form.tsx  match-form.tsx  news-form.tsx
frontend/components/ui/: chart.tsx  empty.tsx  resizable.tsx
frontend/lib/: api.ts  auth-context.tsx  types.ts
(+17 files in other folders)
